--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
     <link rel="search" type="application/opensearchdescription+xml" href="/content-search.xml" title="百度搜索">
-    <title>我喜欢你_百度搜索</title>
+    <title>我喜欢你呀_百度搜索</title>
     <style data-for="result" type="text/css" id="css_newi_result">
         body {
             color: #333;
@@ -4738,9 +4738,10 @@
         }
 
         .c-img {
-            display: block;
+            display:block;
             min-height: 1px;
-            border: 0 0
+            border: 0 0;
+            background-size: cover;
         }
 
 
@@ -9713,7 +9714,7 @@
                                                                                                class="s_ipt"
                                                                                                maxlength="255"
                                                                                                autocomplete="off"
-                                                                                               value="{{替换姓名}}"></span><span
+                                                                                               value="娜娜"></span><span
                             class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span><span
                             class="tools"><span id="mHolder">
                                     <div id="mCon"><span>输入法</span></div>
@@ -10313,6 +10314,8 @@
                                             .opr-recommends-merge-p, .opr-recommends-merge-img, .opr-recommends-merge-mask {
                                                 height: 100px;
                                                 width: 100px;
+                                                background-size: cover;
+                                                object-fit: cover;
                                             }
 
                                             .opr-recommends-merge-item-vertical .opr-recommends-merge-p, .opr-recommends-merge-item-vertical .opr-recommends-merge-img {
@@ -10538,7 +10541,7 @@
                             class="c-icon c-icon-triangle-down"></i></span><span class="search_tool_si c-gap-left">站点内检索<i
                             class="c-icon c-icon-triangle-down"></i></span></div>
                     <div class="nums">
-                        <span class="nums_text">百度为您找到相关结果为1个</span>
+                        <span class="nums_text">百度为您找到相关结果约100,000,000个，但检测出只有一个娜娜与您心中匹配一致</span>
                     </div>
                 </div>
             </div>
@@ -10551,16 +10554,16 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'FFB95FFF'
-                                                }" href="javascript:;" target="_self">{{替换标题1}}</a></h3>
+                                                }" href="javascript:;" target="_self">第一必须是小家伙的</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic1.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">{{替换段落1-1}}</div>
+                            <div class="c-abstract">告诉桃花，不必开了，我等的人，已经来了。</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
-                                                style="text-decoration:none;">https://i.{{替换姓名}}.cn/&nbsp;</a>
+                                                style="text-decoration:none;">https://i.qiaoling.cn/&nbsp;</a>
                             </div>
                         </div>
                     </div>
@@ -10572,7 +10575,7 @@
                      data-click="{'p1':'3','rsv_bdr':'0','fm':'albk',rsv_stl:''}">
                     <h3 class="t c-gap-bottom-small">
                         <a href="javascript:;" target="_self">
-                            <em>{{替换标题2}}</em></a>
+                            <em>那么第二呢？</em></a>
                     </h3>
                     <div class="c-row">
                         <div class="op-bk-polysemy-video__wrap c-gap-bottom">
@@ -10599,20 +10602,18 @@
                             </div>
                         </div>
                         <div class="c-span18 c-span-last">
-                            <p>{{替换段落2-1}}</p>
+                            <p>笨蛋，怎么会有第二个呢？</p>
                             <p>
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
-                                   title="可爱">可爱</a>
+                                   title="可爱">猪猪</a>
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
-                                   title="温柔">温柔</a>
+                                   title="温柔">兔兔</a>
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
-                                   title="大方">大方</a>
+                                   title="大方">Jack</a>
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
-                                   title="优雅">优雅</a>
-                                <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
-                                   title="安静">安静</a>
+                                   title="优雅">Rose</a>
                             </p>
-                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.{{替换姓名}}.com/ </span>
+                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.1314.com/ </span>
                             </p>
                         </div>
                     </div>
@@ -10656,14 +10657,14 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'BFEDEDBA'
-                                                }" href="javascript:;" target="_self">{{替换标题5}}</a></h3>
+                                                }" href="javascript:;" target="_self">所以，你可以做我的女朋友吗？</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic3.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">{{替换段落5-1}}</div>
+                            <div class="c-abstract">你要是不答应，我家猫可就没人照顾了。看在猫的面子上！</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                                 style="text-decoration:none;">
                                 <style>.nor-src-wrap {
@@ -10708,7 +10709,7 @@
                                 .nor-src-icon-v.vicon-3 {
                                     background-image: url(https://b.bdstatic.com/searchbox/icms/searchbox/img/yellow-v.png);
                                 }</style>
-                                <span class="nor-src-wrap">https://you.{{替换姓名}}.com/</span>
+                                <span class="nor-src-wrap">https://you.nana.com/</span>
                             </a>
 
                             </div>
@@ -10720,7 +10721,7 @@
                      data-click="{'p1':'6','rsv_bdr':'0','fm':'alop',rsv_stl:'5'}">
                     <h3 class="t c-gap-bottom-small">
                         <a href="javascript:;" target="_self">
-                            {{替换标题3}}</a>
+                            娜娜吧 - 百度贴吧</a>
                     </h3>
                     <style>
                         .op-tieba-general-mainpic {
@@ -10761,37 +10762,37 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-1}}</a>
+                                                                                            class="op-tieba-general-linktxt">你emo的那一晚，是我第一次，希望你能永远开心</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
-                                    class="op-mthread1-clicknum">1314</i></span></td>
-                            <td class="op-tieba-general-graycolor"><span>回复：<i class="op-mthread1-replaynumber">520</i></span>
+                                    class="op-mthread1-clicknum">07</i></span></td>
+                            <td class="op-tieba-general-graycolor"><span>回复：<i class="op-mthread1-replaynumber">17</i></span>
                             </td>
                         </tr>
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-2}}</a>
+                                                                                            class="op-tieba-general-linktxt">我emo的那一次，是你第一回，看见我的内心</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
-                                    class="op-mthread2-clicknum">139</i></span></td>
-                            <td class="op-tieba-general-graycolor"><span>回复：<i class="op-mthread2-replaynumber">2010</i></span>
+                                    class="op-mthread2-clicknum">07</i></span></td>
+                            <td class="op-tieba-general-graycolor"><span>回复：<i class="op-mthread2-replaynumber">23</i></span>
                             </td>
                         </tr>
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-3}}</a>
+                                                                                            class="op-tieba-general-linktxt">害你生气那次，你说自己较真，但我只在乎你不开心了，哪管什么较真</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
-                                    class="op-mthread3-clicknum">19</i></span></td>
+                                    class="op-mthread3-clicknum">07</i></span></td>
                             <td class="op-tieba-general-graycolor"><span>回复：<i
-                                    class="op-mthread3-replaynumber">20</i></span></td>
+                                    class="op-mthread3-replaynumber">24</i></span></td>
                         </tr>
                         </tbody>
                     </table>
                     <div class="op-tieba-general-lookmore op-tieba-general-mainpl"><a href="javascript:;"
-                                                                                      target="_self"><em>期待更多我们的故事</em></a>
+                                                                                      target="_self"><em>急什么，我们的故事，才开始 > √</em></a>
                     </div>
                     <div class="c-showurl op-tieba-general-mainpl">
                         <span class="c-showurl">i.love.you</span><span class="c-tools"
@@ -10835,37 +10836,37 @@
                      data-op="{'y':'F5FEFFF9'}" data-click="{'p1':'7','rsv_bdr':'0','fm':'alop',rsv_stl:'5'}">
                     <h3 class="t">
                         <a href="javascript:;" target="_self">
-                            {{替换标题4}}</a>
+                            这是一首小情诗？</a>
                     </h3>
                     <div class="c-offset">
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-1}}</span>
+                            <span style="color:#666;float:right">2022-07-31</span>
                             <a href="javascript:;" target="_self">
-                                {{替换内容4-1}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-1}}</span>
-                            <br>{{替换段落4-1}}
+                                她想吃可乐鸡翅、红烧排骨</a>
+                            &nbsp;<span style="color:pink">我说记下了，是真的写到备忘录里了</span>
+                            <br>但记下的，可不止这些
                         </div>
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-2}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-2}}
+                            <span style="color:#666;float:right">2022-07-20</span>
+                            <a href="javascript:;" target="_self">她害怕晚上淋浴时洗头
                             </a>
-                            &nbsp;<span style="color:pink">{{替换短语4-2}}</span>
+                            &nbsp;<span style="color:pink">所以我帮她洗好啦</span>
                         </div>
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-3}}</span>
+                            <span style="color:#666;float:right">2022-07-18</span>
                             <a href="javascript:;" target="_self">
-                                {{替换内容4-3}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-3}}</span>
+                                自称是个爱哭鬼，讨厌自己遇事就哭</a>
+                            &nbsp;<span style="color:pink">那又怎样，要努力哄她开心</span>
                         </div>
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-4}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-4}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-4}}</span>
+                            <span style="color:#666;float:right">2022-08-01</span>
+                            <a href="javascript:;" target="_self">不太爱吃甜，但是水果味的糖可以</a>
+                            &nbsp;<span style="color:pink">嗷，还有螺蛳粉</span>
                         </div>
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-5}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-5}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-5}}</span>
+                            <span style="color:#666;float:right">2022-07-28</span>
+                            <a href="javascript:;" target="_self">很懂事呀，但受委屈了会哭</a>
+                            &nbsp;<span style="color:pink">所以我可不能让她伤心</span>
                         </div>
                     </div>
                 </div>
