--- a/show.html
+++ b/show.html
@@ -133,7 +133,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("娜娜|偷偷|告诉你|桥灵|他|要|跟你|表白|#countdown 3|#time");
+            S.UI.simulate("娜娜|偷偷|告诉你|乔灵，他|要|跟你|表白了|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
