--- a/result.html
+++ b/result.html
@@ -10975,6 +10975,7 @@
         '假如可以的话，我愿意花去生命中的每一分每一秒，陪着你',
         '唱一首写不完的歌，荡漾着爱你的音符',
         '对于世界而言，你是一个人;但是对于我而言，你是我的整个世界',
+        '如果你看到这条，说明你点了很多次了，看来很喜欢嘛，这是乔灵为你一人写的喔，娜娜',
     ];
     let allLinks = document.getElementsByTagName("a");
     for (let i = 0; i < allLinks.length; i++) {
