--- a/result.html
+++ b/result.html
@@ -10782,7 +10782,7 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">害你生气那次，你说自己较真，但我只在乎你不开心了，哪管什么较真</a>
+                                                                                            class="op-tieba-general-linktxt">惹你生气那次，你说是你较真，但我只在乎你不开心了，哪管什么较真</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                     class="op-mthread3-clicknum">07</i></span></td>
