--- a/result.html
+++ b/result.html
@@ -9714,7 +9714,7 @@
                                                                                                class="s_ipt"
                                                                                                maxlength="255"
                                                                                                autocomplete="off"
-                                                                                               value="娜娜"></span><span
+                                                                                               value="娜娜，你知道吗，表白，真的很需要勇气啊，我都感觉已经把余生的勇气全用光了"></span><span
                             class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span><span
                             class="tools"><span id="mHolder">
                                     <div id="mCon"><span>输入法</span></div>
@@ -10792,7 +10792,7 @@
                         </tbody>
                     </table>
                     <div class="op-tieba-general-lookmore op-tieba-general-mainpl"><a href="javascript:;"
-                                                                                      target="_self"><em>急什么，我们的故事，才开始 > √</em></a>
+                                                                                      target="_self"><em>急什么，我们的故事，才开始 > </em></a>
                     </div>
                     <div class="c-showurl op-tieba-general-mainpl">
                         <span class="c-showurl">i.love.you</span><span class="c-tools"
